--- a/osusume_area.html
+++ b/osusume_area.html
@@ -138,6 +138,42 @@
     <h3>自然環境</h3>
     <p>近隣には隅田川テラスがあり、散歩やジョギングに適した環境が整っています。</p>
 
-    
+    <hr>
+
+    <h2 id="nakano">中野区</h2>
+    <p><strong>中野区</strong>は台地1に位置し、地盤の安定したエリアが少ないですが、その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+    <details>
+        <summary>家賃が安めなエリア トップ3</summary>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>区</th>
+                    <th>町</th>
+                    <th>地盤</th>
+                    <th>総合危険度</th>
+                    <th>駅</th>
+                    <th>路線</th>
+                    <th>家賃(万円)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>中野区</td><td>江古田3丁目</td><td>台地1</td><td>1</td><td>新江古田</td><td>都営大江戸線</td><td>11.7</td></tr>
+                <tr><td>中野区</td><td>弥生町6丁目</td><td>台地1</td><td>1</td><td>中野富士見町 方南町</td><td>東京メトロ丸ノ内分岐線</td><td>13.4</td></tr>
+                <tr><td>中野区</td><td>中野4丁目</td><td>台地1</td><td>1</td><td>中野</td><td>JR総武線 東京メトロ東西線 JR中央線</td><td>13.5</td></tr>
+            </tbody>
+        </table>
+    </details>
+    <p>中でも<strong>江古田3丁目</strong>は、都営大江戸線の新江古田駅が利用でき、家賃も手頃なエリアとしておすすめです。</p>
+    <h3>治安の良さ</h3>
+    <p>住宅街が広がる落ち着いたエリアで、比較的静かで暮らしやすい環境が整っています。</p>
+    <h3>交通アクセス</h3>
+    <p>都営大江戸線<strong>新江古田駅</strong>が利用でき、新宿や六本木方面へのアクセスが便利です。また、西武池袋線の<strong>江古田駅</strong>も徒歩圏内で、池袋方面にも出やすいのが特徴です。</p>
+    <h3>買い物環境</h3>
+    <p>スーパーは「ライフ」「オリンピック」「まいばすけっと」などがあり、日常の買い物には困りません。</p>
+    <h3>飲食環境</h3>
+    <p>駅周辺にはファミレスやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
+    <h3>自然環境</h3>
+    <p>近隣には江古田の森公園があり、散歩やジョギングに適した緑豊かな環境が魅力です。</p>
+
 </body>
 </html>
