--- a/osusume_area.html
+++ b/osusume_area.html
@@ -52,49 +52,49 @@
 
     <hr>
 
-    <h2 id="setagaya">世田谷区</h2>
-    <p><strong>世田谷区</strong>の中でも、地震危険度が低く、地盤が固い地域（地盤分類が台地1）のうち、家賃相場が比較的低いエリアをピックアップしました。</p>
-    <details>
-        <summary>家賃が安めなエリア トップ10</summary>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>区</th>
-                    <th>町</th>
-                    <th>地盤</th>
-                    <th>総合危険度</th>
-                    <th>駅</th>
-                    <th>路線</th>
-                    <th>家賃(万円)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>世田谷区</td><td>上祖師谷４丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
-                <tr><td>世田谷区</td><td>給田５丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
-                <tr><td>世田谷区</td><td>北烏山２丁目</td><td>台地1</td><td>1</td><td>富士見ヶ丘（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
-                <tr><td>世田谷区</td><td>北烏山５丁目</td><td>台地1</td><td>1</td><td>久我山（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
-                <tr><td>世田谷区</td><td>喜多見８丁目</td><td>台地1</td><td>1</td><td>喜多見</td><td>小田急小田原線</td><td>11.5</td></tr>
-                <tr><td>世田谷区</td><td>千歳台６丁目</td><td>台地1</td><td>1</td><td>千歳烏山（徒歩10分圏外）</td><td>京王線</td><td>11.6</td></tr>
-                <tr><td>世田谷区</td><td>南烏山６丁目</td><td>台地1</td><td>1</td><td>千歳烏山</td><td>京王線</td><td>11.6</td></tr>
-                <tr><td>世田谷区</td><td>南烏山２丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園・千歳烏山</td><td>京王線</td><td>12.0</td></tr>
-                <tr><td>世田谷区</td><td>粕谷２丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園</td><td>京王線</td><td>12.1</td></tr>
-                <tr><td>世田谷区</td><td>八幡山２丁目</td><td>台地1</td><td>1</td><td>八幡山（徒歩10分圏外）</td><td>京王線</td><td>12.2</td></tr>
-            </tbody>
-        </table>
-    </details>
-    <p>特に<strong>南烏山６丁目</strong>・<strong>南烏山２丁目</strong>・<strong>粕谷２丁目</strong>付近は、<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>の3駅にアクセスしやすく、利便性が高いエリアです。</p>
-    <h3>治安の良さ</h3>
-    <p>南烏山エリアは、犯罪発生率が低く、比較的治安が良い地域として知られています。落ち着いた住宅街が広がり、ファミリー層や女性の一人暮らしにも適しています。</p>
-    <h3>交通アクセス</h3>
-    <p>京王線の<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>が利用可能で、新宿まで約15分と都心へのアクセスが良好です。通勤・通学に便利なエリアです。</p>
-    <h3>買い物環境</h3>
-    <p>駅周辺にはスーパーや商店街があり、日用品の買い物には困りません。特に<strong>千歳烏山駅周辺</strong>は夜遅くまで営業している店舗も多く、利便性が高いです。</p>
-    <h3>飲食環境</h3>
-    <p>商店街にはリーズナブルな飲食店が充実しており、外食にも困りません。千歳烏山駅周辺はカフェやレストランの選択肢も豊富です。</p>
-    <h3>自然環境</h3>
-    <p><strong>芦花恒春園</strong>が近く、自然を楽しめる環境が整っています。散歩やジョギングにも適しており、リラックスできる空間です。</p>
-
-    <hr>
+    <div class="section-box">
+        <h2 id="setagaya">世田谷区</h2>
+        <p><strong>世田谷区</strong>の中でも、地震危険度が低く、地盤が固い地域（地盤分類が台地1）のうち、家賃相場が比較的低いエリアをピックアップしました。</p>
+        <details>
+            <summary>家賃が安めなエリア トップ10</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>世田谷区</td><td>上祖師谷４丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
+                    <tr><td>世田谷区</td><td>給田５丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
+                    <tr><td>世田谷区</td><td>北烏山２丁目</td><td>台地1</td><td>1</td><td>富士見ヶ丘（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
+                    <tr><td>世田谷区</td><td>北烏山５丁目</td><td>台地1</td><td>1</td><td>久我山（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
+                    <tr><td>世田谷区</td><td>喜多見８丁目</td><td>台地1</td><td>1</td><td>喜多見</td><td>小田急小田原線</td><td>11.5</td></tr>
+                    <tr><td>世田谷区</td><td>千歳台６丁目</td><td>台地1</td><td>1</td><td>千歳烏山（徒歩10分圏外）</td><td>京王線</td><td>11.6</td></tr>
+                    <tr><td>世田谷区</td><td>南烏山６丁目</td><td>台地1</td><td>1</td><td>千歳烏山</td><td>京王線</td><td>11.6</td></tr>
+                    <tr><td>世田谷区</td><td>南烏山２丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園・千歳烏山</td><td>京王線</td><td>12.0</td></tr>
+                    <tr><td>世田谷区</td><td>粕谷２丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園</td><td>京王線</td><td>12.1</td></tr>
+                    <tr><td>世田谷区</td><td>八幡山２丁目</td><td>台地1</td><td>1</td><td>八幡山（徒歩10分圏外）</td><td>京王線</td><td>12.2</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>特に<strong>南烏山６丁目</strong>・<strong>南烏山２丁目</strong>・<strong>粕谷２丁目</strong>付近は、<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>の3駅にアクセスしやすく、利便性が高いエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p>南烏山エリアは、犯罪発生率が低く、比較的治安が良い地域として知られています。落ち着いた住宅街が広がり、ファミリー層や女性の一人暮らしにも適しています。</p>
+        <h3>交通アクセス</h3>
+        <p>京王線の<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>が利用可能で、新宿まで約15分と都心へのアクセスが良好です。通勤・通学に便利なエリアです。</p>
+        <h3>買い物環境</h3>
+        <p>駅周辺にはスーパーや商店街があり、日用品の買い物には困りません。特に<strong>千歳烏山駅周辺</strong>は夜遅くまで営業している店舗も多く、利便性が高いです。</p>
+        <h3>飲食環境</h3>
+        <p>商店街にはリーズナブルな飲食店が充実しており、外食にも困りません。千歳烏山駅周辺はカフェやレストランの選択肢も豊富です。</p>
+        <h3>自然環境</h3>
+        <p><strong>芦花恒春園</strong>が近く、自然を楽しめる環境が整っています。散歩やジョギングにも適しており、リラックスできる空間です。</p>
+    </div>
 
     <h2 id="chuo">中央区</h2>
     <p><strong>中央区</strong>は台地の地盤がないため、比較的安全とされる沖積低地2の中で、家賃が安めなエリアをピックアップしました。</p>
