--- a/osusume_area.html
+++ b/osusume_area.html
@@ -138,86 +138,86 @@
     <h3>自然環境</h3>
     <p>近隣には隅田川テラスがあり、散歩やジョギングに適した環境が整っています。</p>
 
-    <hr>
+    <div class="section-box">
+        <h2 id="nakano">中野区</h2>
+        <p><strong>中野区</strong>は台地1に位置し、地盤の安定したエリアが少ないですが、その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>家賃が安めなエリア トップ3</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>中野区</td><td>江古田3丁目</td><td>台地1</td><td>1</td><td>新江古田</td><td>都営大江戸線</td><td>11.7</td></tr>
+                    <tr><td>中野区</td><td>弥生町6丁目</td><td>台地1</td><td>1</td><td>中野富士見町 方南町</td><td>東京メトロ丸ノ内分岐線</td><td>13.4</td></tr>
+                    <tr><td>中野区</td><td>中野4丁目</td><td>台地1</td><td>1</td><td>中野</td><td>JR総武線 東京メトロ東西線 JR中央線</td><td>13.5</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>江古田3丁目</strong>は、都営大江戸線の新江古田駅が利用でき、家賃も手頃なエリアとしておすすめです。</p>
+        <h3>治安の良さ</h3>
+        <p>住宅街が広がる落ち着いたエリアで、比較的静かで暮らしやすい環境が整っています。</p>
+        <h3>交通アクセス</h3>
+        <p>都営大江戸線<strong>新江古田駅</strong>が利用でき、新宿や六本木方面へのアクセスが便利です。また、西武池袋線の<strong>江古田駅</strong>も徒歩圏内で、池袋方面にも出やすいのが特徴です。</p>
+        <h3>買い物環境</h3>
+        <p>スーパーは「ライフ」「オリンピック」「まいばすけっと」などがあり、日常の買い物には困りません。</p>
+        <h3>飲食環境</h3>
+        <p>駅周辺にはファミレスやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
+        <h3>自然環境</h3>
+        <p>近隣には江古田の森公園があり、散歩やジョギングに適した緑豊かな環境が魅力です。</p>
+    </div>
 
-    <h2 id="nakano">中野区</h2>
-    <p><strong>中野区</strong>は台地1に位置し、地盤の安定したエリアが少ないですが、その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
-    <details>
-        <summary>家賃が安めなエリア トップ3</summary>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>区</th>
-                    <th>町</th>
-                    <th>地盤</th>
-                    <th>総合危険度</th>
-                    <th>駅</th>
-                    <th>路線</th>
-                    <th>家賃(万円)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>中野区</td><td>江古田3丁目</td><td>台地1</td><td>1</td><td>新江古田</td><td>都営大江戸線</td><td>11.7</td></tr>
-                <tr><td>中野区</td><td>弥生町6丁目</td><td>台地1</td><td>1</td><td>中野富士見町 方南町</td><td>東京メトロ丸ノ内分岐線</td><td>13.4</td></tr>
-                <tr><td>中野区</td><td>中野4丁目</td><td>台地1</td><td>1</td><td>中野</td><td>JR総武線 東京メトロ東西線 JR中央線</td><td>13.5</td></tr>
-            </tbody>
-        </table>
-    </details>
-    <p>中でも<strong>江古田3丁目</strong>は、都営大江戸線の新江古田駅が利用でき、家賃も手頃なエリアとしておすすめです。</p>
-    <h3>治安の良さ</h3>
-    <p>住宅街が広がる落ち着いたエリアで、比較的静かで暮らしやすい環境が整っています。</p>
-    <h3>交通アクセス</h3>
-    <p>都営大江戸線<strong>新江古田駅</strong>が利用でき、新宿や六本木方面へのアクセスが便利です。また、西武池袋線の<strong>江古田駅</strong>も徒歩圏内で、池袋方面にも出やすいのが特徴です。</p>
-    <h3>買い物環境</h3>
-    <p>スーパーは「ライフ」「オリンピック」「まいばすけっと」などがあり、日常の買い物には困りません。</p>
-    <h3>飲食環境</h3>
-    <p>駅周辺にはファミレスやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
-    <h3>自然環境</h3>
-    <p>近隣には江古田の森公園があり、散歩やジョギングに適した緑豊かな環境が魅力です。</p>
-
-    <hr>
-
-    <h2 id="kita">北区</h2>
-    <p><strong>北区</strong>は台地1に位置し、地盤の安定したエリアが多いのが特徴です。その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
-    <details>
-        <summary>家賃が安めなエリア</summary>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>区</th>
-                    <th>町</th>
-                    <th>地盤</th>
-                    <th>総合危険度</th>
-                    <th>駅</th>
-                    <th>路線</th>
-                    <th>家賃(万円)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>北区</td><td>赤羽北3丁目</td><td>台地1</td><td>1</td><td>北赤羽</td><td>JR埼京線</td><td>10.3</td></tr>
-                <tr><td>北区</td><td>桐ケ丘2丁目</td><td>台地1</td><td>1</td><td>北赤羽</td><td>JR埼京線</td><td>10.3</td></tr>
-                <tr><td>北区</td><td>赤羽西5丁目</td><td>台地1</td><td>1</td><td>本蓮沼（徒歩10分圏外）</td><td>都営三田線</td><td>10.8</td></tr>
-                <tr><td>北区</td><td>桐ケ丘1丁目</td><td>台地1</td><td>1</td><td>本蓮沼（徒歩10分圏外）</td><td>都営三田線</td><td>10.8</td></tr>
-                <tr><td>北区</td><td>西が丘3丁目</td><td>台地1</td><td>1</td><td>板橋本町 本蓮沼</td><td>都営三田線</td><td>10.9</td></tr>
-                <tr><td>北区</td><td>赤羽台4丁目</td><td>台地1</td><td>1</td><td>赤羽岩淵 北赤羽</td><td>埼玉高速鉄道 東京メトロ南北線 JR埼京線</td><td>11.4</td></tr>
-                <tr><td>北区</td><td>王子本町3丁目</td><td>台地1</td><td>1</td><td>王子駅前 王子</td><td>東京メトロ南北線 都電荒川線</td><td>11.4</td></tr>
-                <tr><td>北区</td><td>十条台1丁目</td><td>台地1</td><td>1</td><td>十条</td><td>JR埼京線</td><td>11.4</td></tr>
-                <tr><td>北区</td><td>十条台2丁目</td><td>台地1</td><td>1</td><td>十条</td><td>JR埼京線</td><td>11.4</td></tr>
-                <tr><td>北区</td><td>赤羽台1丁目</td><td>台地1</td><td>1</td><td>赤羽岩淵 赤羽</td><td>東京メトロ南北線 JR高崎線 JR京浜東北線 JR上野東京ライン JR宇都宮線 JR埼京線 埼玉高速鉄道 JR湘南新宿ライン</td><td>11.9</td></tr>
-            </tbody>
-        </table>
-    </details>
-    <p>中でも<strong>赤羽北3丁目</strong>と<strong>桐ケ丘2丁目</strong>は、JR埼京線の北赤羽駅が利用でき、家賃も手頃なエリアとしておすすめです。</p>
-    <h3>治安の良さ</h3>
-    <p>住宅街が広がるエリアで、落ち着いた雰囲気が特徴です。公園も多く、ファミリー層にも人気があります。</p>
-    <h3>交通アクセス</h3>
-    <p>JR埼京線<strong>北赤羽駅</strong>が利用でき、新宿・渋谷方面へのアクセスがスムーズです。また、赤羽駅も近く、多路線が使える利便性があります。</p>
-    <h3>買い物環境</h3>
-    <p>スーパーは「マルエツ」「西友」「ダイエー」などがあり、日常の買い物には困りません。</p>
-    <h3>飲食環境</h3>
-    <p>赤羽駅周辺には飲食店が多く、リーズナブルな居酒屋からカフェ、ラーメン店まで幅広く揃っています。</p>
-    <h3>自然環境</h3>
-    <p>近隣には桐ケ丘中央公園や荒川河川敷があり、散歩やジョギングに適した環境が魅力です。</p>
+    <div class="section-box">
+        <h2 id="kita">北区</h2>
+        <p><strong>北区</strong>は台地1に位置し、地盤の安定したエリアが多いのが特徴です。その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>家賃が安めなエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>北区</td><td>赤羽北3丁目</td><td>台地1</td><td>1</td><td>北赤羽</td><td>JR埼京線</td><td>10.3</td></tr>
+                    <tr><td>北区</td><td>桐ケ丘2丁目</td><td>台地1</td><td>1</td><td>北赤羽</td><td>JR埼京線</td><td>10.3</td></tr>
+                    <tr><td>北区</td><td>赤羽西5丁目</td><td>台地1</td><td>1</td><td>本蓮沼（徒歩10分圏外）</td><td>都営三田線</td><td>10.8</td></tr>
+                    <tr><td>北区</td><td>桐ケ丘1丁目</td><td>台地1</td><td>1</td><td>本蓮沼（徒歩10分圏外）</td><td>都営三田線</td><td>10.8</td></tr>
+                    <tr><td>北区</td><td>西が丘3丁目</td><td>台地1</td><td>1</td><td>板橋本町 本蓮沼</td><td>都営三田線</td><td>10.9</td></tr>
+                    <tr><td>北区</td><td>赤羽台4丁目</td><td>台地1</td><td>1</td><td>赤羽岩淵 北赤羽</td><td>埼玉高速鉄道 東京メトロ南北線 JR埼京線</td><td>11.4</td></tr>
+                    <tr><td>北区</td><td>王子本町3丁目</td><td>台地1</td><td>1</td><td>王子駅前 王子</td><td>東京メトロ南北線 都電荒川線</td><td>11.4</td></tr>
+                    <tr><td>北区</td><td>十条台1丁目</td><td>台地1</td><td>1</td><td>十条</td><td>JR埼京線</td><td>11.4</td></tr>
+                    <tr><td>北区</td><td>十条台2丁目</td><td>台地1</td><td>1</td><td>十条</td><td>JR埼京線</td><td>11.4</td></tr>
+                    <tr><td>北区</td><td>赤羽台1丁目</td><td>台地1</td><td>1</td><td>赤羽岩淵 赤羽</td><td>東京メトロ南北線 JR高崎線 JR京浜東北線 JR上野東京ライン JR宇都宮線 JR埼京線 埼玉高速鉄道 JR湘南新宿ライン</td><td>11.9</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>赤羽北3丁目</strong>と<strong>桐ケ丘2丁目</strong>は、JR埼京線の北赤羽駅が利用でき、家賃も手頃なエリアとしておすすめです。</p>
+        <h3>治安の良さ</h3>
+        <p>住宅街が広がるエリアで、落ち着いた雰囲気が特徴です。公園も多く、ファミリー層にも人気があります。</p>
+        <h3>交通アクセス</h3>
+        <p>JR埼京線<strong>北赤羽駅</strong>が利用でき、新宿・渋谷方面へのアクセスがスムーズです。また、赤羽駅も近く、多路線が使える利便性があります。</p>
+        <h3>買い物環境</h3>
+        <p>スーパーは「マルエツ」「西友」「ダイエー」などがあり、日常の買い物には困りません。</p>
+        <h3>飲食環境</h3>
+        <p>赤羽駅周辺には飲食店が多く、リーズナブルな居酒屋からカフェ、ラーメン店まで幅広く揃っています。</p>
+        <h3>自然環境</h3>
+        <p>近隣には桐ケ丘中央公園や荒川河川敷があり、散歩やジョギングに適した環境が魅力です。</p>
+    </div>
 
 </body>
 </html>
