--- a/osusume_area.html
+++ b/osusume_area.html
@@ -50,8 +50,6 @@
         <li><a href="#setagaya">世田谷区</a></li>
     </ul>
 
-    <hr>
-
     <div class="section-box">
         <h2 id="setagaya">世田谷区</h2>
         <p><strong>世田谷区</strong>の中でも、地震危険度が低く、地盤が固い地域（地盤分類が台地1）のうち、家賃相場が比較的低いエリアをピックアップしました。</p>
@@ -85,13 +83,13 @@
         </details>
         <p>特に<strong>南烏山６丁目</strong>・<strong>南烏山２丁目</strong>・<strong>粕谷２丁目</strong>付近は、<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>の3駅にアクセスしやすく、利便性が高いエリアです。</p>
         <h3>治安の良さ</h3>
-        <p>南烏山エリアは、犯罪発生率が低く、比較的治安が良い地域として知られています。落ち着いた住宅街が広がり、ファミリー層や女性の一人暮らしにも適しています。</p>
+        <p><strong>南烏山エリア</strong>は、犯罪発生率が低く、比較的治安が良い地域として知られています。落ち着いた住宅街が広がり、ファミリー層や女性の一人暮らしにも適しています。</p>
         <h3>交通アクセス</h3>
-        <p>京王線の<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>が利用可能で、新宿まで約15分と都心へのアクセスが良好です。通勤・通学に便利なエリアです。</p>
+        <p><strong>京王線</strong>の<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>が利用可能で、<strong>新宿</strong>まで約15分と都心へのアクセスが良好です。通勤・通学に便利なエリアです。</p>
         <h3>買い物環境</h3>
         <p>駅周辺にはスーパーや商店街があり、日用品の買い物には困りません。特に<strong>千歳烏山駅周辺</strong>は夜遅くまで営業している店舗も多く、利便性が高いです。</p>
         <h3>飲食環境</h3>
-        <p>商店街にはリーズナブルな飲食店が充実しており、外食にも困りません。千歳烏山駅周辺はカフェやレストランの選択肢も豊富です。</p>
+        <p>商店街にはリーズナブルな飲食店が充実しており、外食にも困りません。<strong>千歳烏山駅周辺</strong>はカフェやレストランの選択肢も豊富です。</p>
         <h3>自然環境</h3>
         <p><strong>芦花恒春園</strong>が近く、自然を楽しめる環境が整っています。散歩やジョギングにも適しており、リラックスできる空間です。</p>
     </div>
@@ -133,7 +131,7 @@
         <h3>交通アクセス</h3>
         <p>東京メトロ<strong>日比谷線・東西線の茅場町駅</strong>や<strong>都営浅草線の日本橋駅</strong>が利用でき、東京駅や銀座、新宿など主要エリアへのアクセスが非常に便利です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは「まいばすけっと」「成城石井」「マルエツプチ」などが点在しており、日用品の購入に困ることはありません。</p>
+        <p>スーパーはまいばすけっと・成城石井・マルエツプチなどが点在しており、日用品の購入に困ることはありません。</p>
         <h3>飲食環境</h3>
         <p>オフィスワーカー向けの飲食店が豊富で、ランチやディナーの選択肢が多いエリアです。特に人形町エリアには老舗の和食店も多く、グルメも楽しめます。</p>
         <h3>自然環境</h3>
@@ -170,7 +168,7 @@
         <h3>交通アクセス</h3>
         <p>都営大江戸線<strong>新江古田駅</strong>が利用でき、新宿や六本木方面へのアクセスが便利です。また、西武池袋線の<strong>江古田駅</strong>も徒歩圏内で、池袋方面にも出やすいのが特徴です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは「ライフ」「オリンピック」「まいばすけっと」などがあり、日常の買い物には困りません。</p>
+        <p>スーパーはライフ・オリンピック・まいばすけっとなどがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
         <p>駅周辺にはファミレスやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
         <h3>自然環境</h3>
@@ -214,11 +212,12 @@
         <h3>交通アクセス</h3>
         <p>JR埼京線<strong>北赤羽駅</strong>が利用でき、新宿・渋谷方面へのアクセスがスムーズです。また、赤羽駅も近く、多路線が使える利便性があります。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは「マルエツ」「西友」「ダイエー」などがあり、日常の買い物には困りません。</p>
+        <p>スーパーはマルエツ・西友・ダイエーなどがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
         <p>赤羽駅周辺には飲食店が多く、リーズナブルな居酒屋からカフェ、ラーメン店まで幅広く揃っています。</p>
         <h3>自然環境</h3>
         <p>近隣には桐ケ丘中央公園や荒川河川敷があり、散歩やジョギングに適した環境が魅力です。</p>
+    </div>
     </div>
 
 </body>
