--- a/osusume_area.html
+++ b/osusume_area.html
@@ -129,13 +129,13 @@
         <h3>治安の良さ</h3>
         <p>オフィス街としての性質が強く、夜間は比較的静かで落ち着いた雰囲気があります。防犯カメラの設置も多く、治安は安定しています。</p>
         <h3>交通アクセス</h3>
-        <p>東京メトロ<strong>日比谷線・東西線の茅場町駅</strong>や<strong>都営浅草線の日本橋駅</strong>が利用でき、東京駅や銀座、新宿など主要エリアへのアクセスが非常に便利です。</p>
+        <p><strong>東京メトロ日比谷線・東西線 茅場町駅</strong>や<strong>都営浅草線 日本橋駅</strong>が利用でき、<strong>東京駅</strong>や<strong>銀座</strong>、<strong>新宿</strong>strong>など主要エリアへのアクセスが非常に便利です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーはまいばすけっと・成城石井・マルエツプチなどが点在しており、日用品の購入に困ることはありません。</p>
+        <p>スーパーは<strong>まいばすけっと</strong>・<strong>成城石井</strong>・<strong>マルエツプチ</strong>などが点在しており、日用品の購入に困ることはありません。</p>
         <h3>飲食環境</h3>
-        <p>オフィスワーカー向けの飲食店が豊富で、ランチやディナーの選択肢が多いエリアです。特に人形町エリアには老舗の和食店も多く、グルメも楽しめます。</p>
+        <p>オフィスワーカー向けの飲食店が豊富で、ランチやディナーの選択肢が多いエリアです。特に<strong>人形町エリア</strong>には老舗の和食店も多く、グルメも楽しめます。</p>
         <h3>自然環境</h3>
-        <p>近隣には隅田川テラスがあり、散歩やジョギングに適した環境が整っています。</p>
+        <p>近隣には<strong>隅田川テラス</strong>があり、散歩やジョギングに適した環境が整っています。</p>
     </div>
 
     <div class="section-box">
@@ -162,17 +162,17 @@
                 </tbody>
             </table>
         </details>
-        <p>中でも<strong>江古田3丁目</strong>は、都営大江戸線の新江古田駅が利用でき、家賃も手頃なエリアとしておすすめです。</p>
+        <p>中でも<strong>江古田3丁目</strong>は、<strong>都営大江戸線 新江古田駅</strong>が利用でき、家賃も手頃なエリアとしておすすめです。</p>
         <h3>治安の良さ</h3>
         <p>住宅街が広がる落ち着いたエリアで、比較的静かで暮らしやすい環境が整っています。</p>
         <h3>交通アクセス</h3>
-        <p>都営大江戸線<strong>新江古田駅</strong>が利用でき、新宿や六本木方面へのアクセスが便利です。また、西武池袋線の<strong>江古田駅</strong>も徒歩圏内で、池袋方面にも出やすいのが特徴です。</p>
+        <p><strong>都営大江戸線 新江古田駅</strong>が利用でき、<strong>新宿</strong>や<strong>六本木</strong>方面へのアクセスが便利です。また、<strong>西武池袋線 江古田駅</strong>も徒歩圏内で、<strong>池袋</strong>方面にも出やすいのが特徴です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーはライフ・オリンピック・まいばすけっとなどがあり、日常の買い物には困りません。</p>
+        <p>スーパーは<strong>ライフ</strong>・<strong>オリンピック</strong>・<strong>まいばすけっと</strong>などがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
         <p>駅周辺にはファミレスやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
         <h3>自然環境</h3>
-        <p>近隣には江古田の森公園があり、散歩やジョギングに適した緑豊かな環境が魅力です。</p>
+        <p>近隣には<strong>江古田の森公園</strong>があり、散歩やジョギングに適した緑豊かな環境が魅力です。</p>
     </div>
 
     <div class="section-box">
@@ -206,17 +206,17 @@
                 </tbody>
             </table>
         </details>
-        <p>中でも<strong>赤羽北3丁目</strong>と<strong>桐ケ丘2丁目</strong>は、JR埼京線の北赤羽駅が利用でき、家賃も手頃なエリアとしておすすめです。</p>
+        <p>中でも<strong>赤羽北3丁目</strong>と<strong>桐ケ丘2丁目</strong>は、<strong>JR埼京線 北赤羽駅</strong>が利用でき、家賃も手頃なエリアとしておすすめです。</p>
         <h3>治安の良さ</h3>
         <p>住宅街が広がるエリアで、落ち着いた雰囲気が特徴です。公園も多く、ファミリー層にも人気があります。</p>
         <h3>交通アクセス</h3>
-        <p>JR埼京線<strong>北赤羽駅</strong>が利用でき、新宿・渋谷方面へのアクセスがスムーズです。また、赤羽駅も近く、多路線が使える利便性があります。</p>
+        <p><strong>JR埼京線 北赤羽駅</strong>が利用でき、<strong>新宿</strong>・<strong>渋谷</strong>方面へのアクセスがスムーズです。また、<strong>赤羽駅</strong>も近く、多路線が使える利便性があります。</p>
         <h3>買い物環境</h3>
-        <p>スーパーはマルエツ・西友・ダイエーなどがあり、日常の買い物には困りません。</p>
+        <p>スーパーは<strong>マルエツ</strong>・<strong>西友</strong>・<strong>ダイエー</strong>などがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
-        <p>赤羽駅周辺には飲食店が多く、リーズナブルな居酒屋からカフェ、ラーメン店まで幅広く揃っています。</p>
+        <p><strong>赤羽駅周辺</strong>には飲食店が多く、リーズナブルな居酒屋からカフェ、ラーメン店まで幅広く揃っています。</p>
         <h3>自然環境</h3>
-        <p>近隣には桐ケ丘中央公園や荒川河川敷があり、散歩やジョギングに適した環境が魅力です。</p>
+        <p>近隣には<strong>桐ケ丘中央公園</strong>や<strong>荒川河川敷</strong>があり、散歩やジョギングに適した環境が魅力です。</p>
     </div>
     </div>
 
