--- a/osusume_area.html
+++ b/osusume_area.html
@@ -37,6 +37,8 @@
         <li><a href="#edogawa">江戸川区</a></li>
         <li><a href="#koto">江東区</a></li>
         <li><a href="#shibuya">渋谷区</a></li>
+        <li><a href="#minato">港区</a></li>
+        <li><a href="#meguro">目黒区</a></li>
     </ul>
 
     <div class="section-box">
@@ -697,7 +699,7 @@
         <h2 id="minato">港区</h2>
         <p><strong>港区</strong>は全体的に家賃が高いですが、その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
-            <summary>おすすめエリア一覧</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
@@ -735,6 +737,50 @@
         <p>周辺には和食・洋食・カフェなど多彩な飲食店があり、外食にも困りません。</p>
         <h3>自然環境</h3>
         <p><strong>高輪台駅周辺</strong>は緑も多く、少し足を伸ばせば<strong>高輪森の公園</strong>や<strong>御殿山庭園</strong>など自然豊かなスポットもあります。</p>
+    </div>
+
+    <div class="section-box">
+        <h2 id="meguro">目黒区</h2>
+        <p><strong>目黒区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>目黒区</td><td>東が丘2丁目</td><td>台地1</td><td>1</td><td>駒沢大学</td><td>東急田園都市線</td><td>14.5</td></tr>
+                    <tr><td>目黒区</td><td>下目黒6丁目</td><td>台地1</td><td>1</td><td>武蔵小山（徒歩10分圏外）</td><td>東急目黒線</td><td>14.7</td></tr>
+                    <tr><td>目黒区</td><td>平町1丁目</td><td>台地1</td><td>1</td><td>都立大学</td><td>東急東横線</td><td>15.0</td></tr>
+                    <tr><td>目黒区</td><td>碑文谷2丁目</td><td>台地1</td><td>1</td><td>学芸大学</td><td>東急東横線</td><td>15.0</td></tr>
+                    <tr><td>目黒区</td><td>碑文谷3丁目</td><td>台地1</td><td>1</td><td>都立大学（徒歩10分圏外）</td><td>東急東横線</td><td>15.0</td></tr>
+                    <tr><td>目黒区</td><td>碑文谷4丁目</td><td>台地1</td><td>1</td><td>都立大学</td><td>東急東横線</td><td>15.0</td></tr>
+                    <tr><td>目黒区</td><td>碑文谷5丁目</td><td>台地1</td><td>1</td><td>都立大学 学芸大学</td><td>東急東横線</td><td>15.0</td></tr>
+                    <tr><td>目黒区</td><td>目黒本町2丁目</td><td>台地1</td><td>1</td><td>学芸大学</td><td>東急東横線</td><td>15.0</td></tr>
+                    <tr><td>目黒区</td><td>八雲1丁目</td><td>台地1</td><td>1</td><td>都立大学</td><td>東急東横線</td><td>15.0</td></tr>
+                    <tr><td>目黒区</td><td>八雲5丁目</td><td>台地1</td><td>1</td><td>都立大学（徒歩10分圏外）</td><td>東急東横線</td><td>15.0</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>碑文谷2丁目</strong>・<strong>碑文谷3丁目</strong>・<strong>碑文谷4丁目</strong>・<strong>碑文谷5丁目</strong>は、落ち着いた住宅街で人気の高いエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>碑文谷エリア</strong>は高級住宅地として知られ、静かで治安も良く、ファミリー層にも人気です。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>東急東横線</strong>の<strong>都立大学駅</strong>や<strong>学芸大学駅</strong>が徒歩圏内にあり、<strong>渋谷</strong>・<strong>自由が丘</strong>・<strong>横浜方面</strong>へのアクセスも良好です。</p>
+        <h3>買い物環境</h3>
+        <p>周辺には<strong>オオゼキ</strong>などのスーパーや、<strong>イオンスタイル</strong>などのショッピングモールが充実しており、日常の買い物にも便利です。</p>
+        <h3>飲食環境</h3>
+        <p><strong>学芸大学駅周辺</strong>にはカフェやレストラン、ベーカリーなどおしゃれな飲食店も多く、外食やテイクアウトにも困りません。</p>
+        <h3>自然環境</h3>
+        <p><strong>碑文谷公園</strong>や<strong>清水池公園</strong>など、緑豊かな公園が点在しており、子育てや散歩にも最適な環境です。</p>
     </div>
 
 </body>
