--- a/osusume_area.html
+++ b/osusume_area.html
@@ -783,5 +783,49 @@
         <p><strong>碑文谷公園</strong>や<strong>清水池公園</strong>など、緑豊かな公園が点在しており、子育てや散歩にも最適な環境です。</p>
     </div>
 
+    <div class="section-box">
+        <h2 id="nerima">練馬区</h2>
+        <p><strong>練馬区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>練馬区</td><td>大泉学園町9丁目</td><td>台地1</td><td>1</td><td>和光市（徒歩10分圏外）</td><td>東武東上本線</td><td>10.0</td></tr>
+                    <tr><td>練馬区</td><td>石神井台1丁目</td><td>台地1</td><td>1</td><td>石神井公園（徒歩10分圏外）</td><td>西武池袋線</td><td>10.1</td></tr>
+                    <tr><td>練馬区</td><td>光が丘1丁目</td><td>台地1</td><td>1</td><td>下赤塚 地下鉄赤塚</td><td>東京メトロ有楽町線 東武東上本線 東京メトロ副都心線</td><td>10.1</td></tr>
+                    <tr><td>練馬区</td><td>高松5丁目</td><td>台地1</td><td>1</td><td>光が丘</td><td>都営大江戸線</td><td>10.2</td></tr>
+                    <tr><td>練馬区</td><td>高松6丁目</td><td>台地1</td><td>1</td><td>光が丘（徒歩10分圏外）</td><td>都営大江戸線</td><td>10.2</td></tr>
+                    <tr><td>練馬区</td><td>光が丘2丁目</td><td>台地1</td><td>1</td><td>光が丘</td><td>都営大江戸線</td><td>10.2</td></tr>
+                    <tr><td>練馬区</td><td>光が丘3丁目</td><td>台地1</td><td>1</td><td>光が丘</td><td>都営大江戸線</td><td>10.2</td></tr>
+                    <tr><td>練馬区</td><td>光が丘5丁目</td><td>台地1</td><td>1</td><td>光が丘</td><td>都営大江戸線</td><td>10.2</td></tr>
+                    <tr><td>練馬区</td><td>光が丘6丁目</td><td>台地1</td><td>1</td><td>光が丘</td><td>都営大江戸線</td><td>10.2</td></tr>
+                    <tr><td>練馬区</td><td>光が丘7丁目</td><td>台地1</td><td>1</td><td>光が丘</td><td>都営大江戸線</td><td>10.2</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>光が丘1～7丁目</strong>、<strong>高松5丁目</strong>・<strong>高松6丁目</strong>は、<strong>光が丘エリア</strong>として人気の高い地域です。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>光が丘エリア</strong>は<strong>練馬区</strong>の中でも治安が良く、落ち着いた住宅街が広がっています。ファミリー層や単身者にも安心して暮らせる環境です。</p>
+        <h3>交通アクセス</h3>
+        <p></strong>都営大江戸線</strong>の<strong>光が丘駅</strong>を中心に、<strong>下赤塚駅</strong>や<strong>地下鉄赤塚駅</strong>も利用可能で、都心へのアクセスも便利です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>光が丘IMA</strong>などの大型ショッピングセンターをはじめ、スーパーやドラッグストアも充実しており、日常の買い物に困りません。</p>
+        <h3>飲食環境</h3>
+        <p>周辺にはファミリーレストランやカフェ、ラーメン店など多彩な飲食店が揃っています。</p>
+        <h3>自然環境</h3>
+        <p><strong>光が丘公園</strong>など大規模な公園が近くにあり、緑豊かでスポーツやレジャー、子育てにも最適な環境です。</p>
+    </div>
+
 </body>
 </html>
