--- a/osusume_area.html
+++ b/osusume_area.html
@@ -39,6 +39,8 @@
         <li><a href="#shibuya">渋谷区</a></li>
         <li><a href="#minato">港区</a></li>
         <li><a href="#meguro">目黒区</a></li>
+        <li><a href="#nerima">練馬区</a></li>
+        <li><a href="#arakawa">荒川区</a></li>
     </ul>
 
     <div class="section-box">
@@ -825,6 +827,43 @@
         <p>周辺にはファミリーレストランやカフェ、ラーメン店など多彩な飲食店が揃っています。</p>
         <h3>自然環境</h3>
         <p><strong>光が丘公園</strong>など大規模な公園が近くにあり、緑豊かでスポーツやレジャー、子育てにも最適な環境です。</p>
+    </div>
+
+    <div class="section-box">
+        <h2 id="arakawa">荒川区</h2>
+        <p><strong>荒川区</strong>は台地の地盤がないですが、その中でも比較的危険度が低く、家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>荒川区</td><td>荒川8丁目</td><td>沖積低地4</td><td>1</td><td>荒川二丁目 荒川七丁目 町屋</td><td>京成本線 都電荒川線</td><td>11.3</td></tr>
+                    <tr><td>荒川区</td><td>南千住4丁目</td><td>沖積低地4</td><td>1</td><td>南千住</td><td>JR常磐線快速 東京メトロ日比谷線 つくばエクスプレス線</td><td>12.5</td></tr>
+                    <tr><td>荒川区</td><td>南千住8丁目</td><td>沖積低地4</td><td>1</td><td>京成関屋（徒歩10分圏外）</td><td>京成本線</td><td>11.4</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>荒川8丁目</strong>は、周辺環境が整っており、家賃も控えめでおすすめのエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>荒川8丁目</strong>は比較的落ち着いた雰囲気の住宅街が広がり、治安面でも安心感があります。</p>
+        <h3>交通アクセス</h3>
+        <p>最寄りの<strong>荒川二丁目駅</strong>や<strong>荒川七丁目駅</strong>から<strong>都電荒川線</strong>、<strong>京成本線</strong>が利用可能で、<strong>町屋駅</strong>からは<strong>東京メトロ千代田線</strong>への乗り換えも可能です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>町屋エリア</strong>の商業施設が徒歩圏内で、<strong>赤札堂</strong>・<strong>新鮮市場</strong>・<strong>グルメシティ</strong>・<strong>まいばすけっと</strong>などのスーパー、<strong>ウエルシア</strong>・<strong>マツモトキヨシ</strong>・<strong>ぱぱす</strong>などのドラッグストアがあります。また、商店街もあり、日々の買い物にも便利です。</p>
+        <h3>飲食環境</h3>
+        <p>昔ながらの飲食店からカフェまでバリエーション豊かで、外食にも困りません。</p>
+        <h3>自然環境</h3>
+        <p><strong>荒川自然公園</strong>や<strong>隅田川沿いの遊歩道</strong>など、自然を感じられるスポットもあり、散歩やジョギングに適しています。</p>
     </div>
 
 </body>
