--- a/osusume_area.html
+++ b/osusume_area.html
@@ -905,5 +905,49 @@
         <p>近隣には<strong>新小岩公園</strong>などの自然スポットもあり、散策やリフレッシュに適した環境です。</p>
     </div>
 
+    <div class="section-box">
+        <h2 id="toshima">豊島区</h2>
+        <p><strong>豊島区</strong>の中でも比較的安全性が高く、家賃も手ごろなエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>豊島区</td><td>西池袋3丁目</td><td>台地1</td><td>1</td><td>要町 池袋</td><td>東武東上本線 JR山手線 西武池袋線 JR埼京線 東京メトロ有楽町線 JR湘南新宿ライン 東京メトロ副都心線 東京メトロ丸ノ内線</td><td>13.2</td></tr>
+                    <tr><td>豊島区</td><td>駒込5丁目</td><td>台地1</td><td>1</td><td>駒込 巣鴨 庚申塚</td><td>都営三田線 JR山手線 東京メトロ南北線 都電荒川線</td><td>13.6</td></tr>
+                    <tr><td>豊島区</td><td>南池袋1丁目</td><td>台地1</td><td>1</td><td>東池袋 池袋 都電雑司ヶ谷</td><td>JR山手線 東武東上本線 西武池袋線 都電荒川線 JR埼京線 東京メトロ有楽町線 JR湘南新宿ライン 東京メトロ副都心線 東京メトロ丸ノ内線</td><td>13.6</td></tr>
+                    <tr><td>豊島区</td><td>駒込4丁目</td><td>台地1</td><td>1</td><td>駒込 巣鴨</td><td>都営三田線 JR山手線 東京メトロ南北線</td><td>13.7</td></tr>
+                    <tr><td>豊島区</td><td>巣鴨2丁目</td><td>台地1</td><td>1</td><td>駒込 巣鴨</td><td>都営三田線 JR山手線 東京メトロ南北線</td><td>13.7</td></tr>
+                    <tr><td>豊島区</td><td>南池袋2丁目</td><td>台地1</td><td>1</td><td>池袋 東池袋 都電雑司ヶ谷</td><td>西武池袋線 東京メトロ有楽町線 都電荒川線</td><td>13.7</td></tr>
+                    <tr><td>豊島区</td><td>西池袋1丁目</td><td>台地1</td><td>1</td><td>池袋</td><td>東武東上本線 JR山手線 西武池袋線 JR埼京線 東京メトロ有楽町線 JR湘南新宿ライン 東京メトロ副都心線 東京メトロ丸ノ内線</td><td>13.9</td></tr>
+                    <tr><td>豊島区</td><td>目白1丁目</td><td>台地1</td><td>1</td><td>雑司が谷 学習院下 目白</td><td>JR山手線 東京メトロ副都心線 都電荒川線</td><td>13.9</td></tr>
+                    <tr><td>豊島区</td><td>東池袋3丁目</td><td>台地1</td><td>1</td><td>東池袋四丁目 向原 東池袋</td><td>東京メトロ有楽町線 都電荒川線</td><td>14.2</td></tr>
+                    <tr><td>豊島区</td><td>東池袋1丁目</td><td>台地1</td><td>1</td><td>東池袋四丁目 東池袋 池袋</td><td>東武東上本線 JR山手線 西武池袋線 都電荒川線 JR埼京線 東京メトロ有楽町線 JR湘南新宿ライン 東京メトロ副都心線 東京メトロ丸ノ内線</td><td>14.3</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>西池袋3丁目</strong>は、<strong>池袋駅</strong>にも近く、利便性と住みやすさを兼ね備えたエリアとしておすすめです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>西池袋3丁目</strong>は、<strong>池袋</strong>の中でも落ち着いた雰囲気があり、単身者からファミリー層まで幅広い層に人気があります。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>池袋駅</strong>や<strong>要町駅</strong>が徒歩圏内で、複数路線が利用可能です。都心各地へのアクセスも良好です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>まいばすけっと</strong>・<strong>東武ストア</strong>・<strong>成城石井</strong>などのスーパーや<strong>スギ薬局</strong>・<strong>マツモトキヨシ</strong>などのドラッグストアがあります。<strong>池袋駅周辺</strong>には大型百貨店や商業施設が多数あり、日常の買い物からレジャーまで幅広く対応できます。</p>
+        <h3>飲食環境</h3>
+        <p><strong>西池袋エリア</strong>には、飲食店やカフェ、居酒屋など多彩なグルメスポットが充実しています。</p>
+        <h3>自然環境</h3>
+        <p><strong>立教大学</strong>のキャンパスや<strong>目白庭園</strong>などの自然を感じられるスポットや、<strong>自由学園明日館</strong>などの文化施設も点在し、落ち着いた環境が魅力です。</p>
+    </div>
+
 </body>
 </html>
