--- a/osusume_area.html
+++ b/osusume_area.html
@@ -41,6 +41,9 @@
         <li><a href="#meguro">目黒区</a></li>
         <li><a href="#nerima">練馬区</a></li>
         <li><a href="#arakawa">荒川区</a></li>
+        <li><a href="#katsushika">葛飾区</a></li>
+        <li><a href="#toshima">豊島区</a></li>
+        <li><a href="#adachi">足立区</a></li>
     </ul>
 
     <div class="section-box">
@@ -947,6 +950,47 @@
         <p><strong>西池袋エリア</strong>には、飲食店やカフェ、居酒屋など多彩なグルメスポットが充実しています。</p>
         <h3>自然環境</h3>
         <p><strong>立教大学</strong>のキャンパスや<strong>目白庭園</strong>などの自然を感じられるスポットや、<strong>自由学園明日館</strong>などの文化施設も点在し、落ち着いた環境が魅力です。</p>
+    </div>
+
+    <div class="section-box">
+        <h2 id="adachi">足立区</h2>
+        <p><strong>足立区</strong>は台地の地盤がないですが、その中でも比較的危険度が低く、家賃が安めのエリアをピックアップしました。。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>足立区</td><td>花畑5丁目</td><td>沖積低地4</td><td>1</td><td>谷塚（徒歩10分圏外）</td><td>東武伊勢崎線</td><td>7.1</td></tr>
+                    <tr><td>足立区</td><td>花畑8丁目</td><td>沖積低地4</td><td>1</td><td>谷塚（徒歩10分圏外）</td><td>東武伊勢崎線</td><td>7.1</td></tr>
+                    <tr><td>足立区</td><td>西保木間4丁目</td><td>沖積低地4</td><td>1</td><td>竹ノ塚（徒歩10分圏外）</td><td>東武伊勢崎線</td><td>7.2</td></tr>
+                    <tr><td>足立区</td><td>西加平2丁目</td><td>沖積低地4</td><td>1</td><td>六町</td><td>つくばエクスプレス線</td><td>8.0</td></tr>
+                    <tr><td>足立区</td><td>南花畑5丁目</td><td>沖積低地4</td><td>1</td><td>六町（徒歩10分圏外）</td><td>つくばエクスプレス線</td><td>8.0</td></tr>
+                    <tr><td>足立区</td><td>入谷6丁目</td><td>沖積低地4</td><td>1</td><td>舎人公園</td><td>日暮里・舎人ライナー</td><td>8.3</td></tr>
+                    <tr><td>足立区</td><td>千住関屋町</td><td>沖積低地4</td><td>1</td><td>牛田 京成関屋</td><td>東武伊勢崎線 京成本線</td><td>11.5</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>西加平2丁目</strong>は、<strong>六町駅</strong>に近く、バランスの取れた住環境が魅力のエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>西加平2丁目</strong>は、住宅街が中心で落ち着いた雰囲気があり、比較的静かな環境が広がっています。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>六町駅</strong>が徒歩圏内にあり、<strong>つくばエクスプレス線</strong>を利用することで<strong>秋葉原方面</strong>など都心部へのアクセスもスムーズです。</p>
+        <h3>買い物環境</h3>
+        <p>近隣に商業施設ないのが難点ですが、<strong>六町駅周辺</strong>まで行けば<strong>ライフ</strong>などのスーパー、南の<strong>青井エリア</strong>には<strong>ライフ</strong>などのスーパーや<strong>セイムス</strong>などのドラッグストアがあります。</p>
+        <h3>飲食環境</h3>
+        <p>周辺には地域密着型の飲食店があり、外食にも便利な環境です。</p>
+        <h3>自然環境</h3>
+        <p>周辺には<strong>一ツ家第一公園</strong>などがあり、子育て世帯にも住みやすいエリアとして人気があります。<strong>六町ミュージアム・フローラ</strong>などの文化施設もあります。</p>
     </div>
 
 </body>
